template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-deployment
  
spec:
  replicas: 4
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: test-app
          image: boilerplateacr.azurecr.io/web_app:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-nginx-loadbalancer-service
  
spec:
  type: LoadBalancer
  selector:
    app: test-app
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: pedroalejandropt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-nginx-loadbalancer-service
            port:
              number: 80


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hey-app-deployment
  
spec:
  replicas: 4
  selector:
    matchLabels:
      app: hey-app
  template:
    metadata:
      labels:
        app: hey-app
    spec:
      containers:
        - name: hey-app
          image: boilerplateacr.azurecr.io/web_app2:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hey-app-nginx-loadbalancer-service
  
spec:
  type: LoadBalancer
  selector:
    app: hey-app
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hey-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hey.pedroalejandropt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hey-app-nginx-loadbalancer-service
            port:
              number: 80
